# kaldi-dnn-ali-gop

./: .gitignore  LICENSE  README.md
egs/gop-compute/: cmd.sh  path.sh  run.sh
egs/gop-compute/local/: compute-dnn-gop.sh  compute-gmm-gop.sh  compute-gmm-gop2.sh  ctm2textgrid.py  data_preparation.sh  kaldi_io.py  phn_conf_ops.py  prepare_align.py  textgrid_ops.py
src/: CMakeLists.txt  Makefile  configure
src/decoder/: Makefile  decoder-wrappers.cc  decoder-wrappers.h
src/gmm/: Makefile  decodable-am-diag-gmm.h  diag-gmm.cc  diag-gmm.h
src/gmmbin/: Makefile
src/gop/: Makefile  dnn-gop.cc  dnn-gop.h  gmm-gop.cc  gmm-gop.h  gmm-gop2.cc  gmm-gop2.h
src/gopbin/: Makefile  compute-dnn-gop.cc  compute-gmm-gop.cc  compute-gmm-gop2.cc
src/hmm/: Makefile  hmm-utils.cc  hmm-utils.h
src/latbin/: Makefile
src/matrix/: Makefile  matrix-lib.h
src/tree/: Makefile  context-dep.cc  context-dep.h
src/util/: Makefile  kaldi-table-inl.h
